# firestore-query

./: .gitignore  Cargo.toml  README.md  build.rs  build_config.json
src/: lib.rs  main.rs
