[package]
name = "firestore-query"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
serde_json = "1.0.96"
serde = { version = "1.0.162", features = [ "derive" ] }
tokio = { version = "1.28.0", features = [ "full" ] }
tonic = { version = "0.9.2", features = [ "tls", "tls-roots" ] }

[build-dependencies]
tonic-build = "0.9.2"
